// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth reducer should handle LOGIN_FAILURE 1`] = `
Object {
  "error": Object {
    "error": "bad validation",
    "error_description": "incorrect code",
    "error_uri": "/error",
  },
  "failed": true,
  "token": null,
}
`;

exports[`auth reducer should handle LOGIN_SUCCESS 1`] = `
Object {
  "error": Object {},
  "failed": false,
  "token": "anAccessToken",
}
`;

exports[`auth reducer should handle LOGOUT 1`] = `
Object {
  "error": Object {},
  "failed": false,
  "token": null,
}
`;

exports[`auth reducer should handle initial state 1`] = `
Object {
  "error": Object {},
  "failed": false,
  "token": null,
}
`;
